[package]
name = "oxideav-pbm"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-pbm"
homepage = "https://github.com/OxideAV/oxideav-pbm"
authors = ["Mark Karpeles"]
description = "Pure-Rust Netpbm (PBM/PGM/PPM/PNM/PAM) image codec for the oxideav framework"
readme = "README.md"
keywords = ["multimedia", "image", "netpbm", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-pbm` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `decode_pbm` / `encode_pbm` API plus crate-local `PbmImage` / `PbmError`
# / `PbmPixelFormat` types and never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder / container demuxer + muxer
# trait implementations against `oxideav-core` so the crate can plug
# into the `oxideav` framework registry. Default-on; turn off for
# image-library use-cases that just want the standalone `decode_pbm` API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# Round 176 (depth-mode benchmarks): Criterion drives the three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future encoder /
# decoder rounds use to A/B their algorithm tweaks (SIMD byte-swap for
# 16-bit P5/P6, lookup-table ASCII writer for P2/P3, branch-free P4
# bit packer). Pinned to the same 0.5 line the other OxideAV crates
# with benches (png / flac / tiff / cinepak / tta / magicyuv / h264 /
# pixfmt) already track.
criterion = "0.5"

# Round 176 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained (no committed fixture files — every input is
# synthesised in-bench from a deterministic xorshift seed, then fed
# through the crate's own production encoder/decoder via the public
# `oxideav_pbm::{encode_pbm, decode_pbm, encode_pbm_ascii,
# encode_pbm_with_format}` API). Run with:
#     cargo bench -p oxideav-pbm --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false
