[package]
name = "oxideav-pbm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Netpbm has a small but adversarial parser surface: an attacker-supplied
# 2-byte magic, an ASCII header with comments + decimal width/height/
# maxval/depth tokens (and a multi-line PAM key/value block for P7), then
# either a bit-packed body (P4), an 8/16-bit big-endian sample stream
# (P5/P6/P7), or whitespace-separated ASCII digit tokens (P1/P2/P3) —
# all of whose lengths are derived from the header fields.
#
# The fuzz contract is purely panic-freedom: every public decode entry
# point must return a `Result` for malformed input — never panic, never
# abort, never over-allocate based on attacker-claimed dimensions.
#
# Three independent decode entry points are fuzzed because they map to
# distinct parser state machines:
#
#   * `decode_pbm`       — full pipeline: `parse_header` → ASCII/binary
#                          body decoder → `samples_to_plane`. Drives
#                          every code path the public API exposes,
#                          including the `samples_to_plane` per-
#                          pixel-format buffer allocator.
#   * `parse_header`     — header-only: rejects bad magic, validates
#                          maxval / depth ranges, validates PAM
#                          TUPLTYPE-vs-depth consistency. Driven
#                          directly so a single-byte header mutation
#                          that wouldn't survive end-to-end decode
#                          still gets exercised at the parser.
#   * `encode_roundtrip` — feeds arbitrary bytes through the encoder by
#                          building a synthetic `PbmImage` whose plane
#                          data is the fuzz input and whose
#                          width/height/format are taken from the first
#                          few bytes. Catches encoder panics on
#                          mismatched stride / plane-data sizes for
#                          every `PbmPixelFormat` × `PbmEncodeFormat`
#                          combination.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-pbm]
path = ".."
default-features = false  # standalone decode/encode path, no registry

# Prevent this fuzz package from being pulled into the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

# End-to-end decode — drives `decode_pbm` on arbitrary bytes. The full
# parser pipeline (`parse_header` → ASCII/binary body decoder →
# `samples_to_plane` buffer allocator) is exercised.
[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Header-only — drives `parse_header` on arbitrary bytes. Exercises the
# P1/P2/P3/P4/P5/P6 PNM tokenizer + the P7 PAM line-based key/value
# block in isolation from body decoding.
[[bin]]
name = "header"
path = "fuzz_targets/header.rs"
test = false
doc = false

# Encoder — builds a synthetic `PbmImage` from arbitrary bytes (first
# byte picks `PbmPixelFormat`, next two are width LE, next two are
# height LE, remainder is plane data) and runs it through every
# `PbmEncodeFormat` variant. Catches encoder panics on mismatched
# stride / plane-size combinations and exercises the `Unsupported`
# rejection paths for every format × pixel-format pair.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

# Portable FloatMap (`Pf` / `PF`) decode — drives `decode_pfm` directly
# on arbitrary bytes. The PFM header is a separate strict three-line
# state machine (no comments, no CRLF, single-LF terminator, sign-of-
# scale-line endianness selector) and the body is a raw IEEE-754
# float32 stream with a BE↔LE byte-swap kernel and bottom-to-top row
# flip — none of which is shared with the PNM/PAM tokenizer the
# `decode` and `header` harnesses already cover.
[[bin]]
name = "pfm"
path = "fuzz_targets/pfm.rs"
test = false
doc = false

# Multi-image stream walk — drives `decode_pbm_multi` /
# `decode_pbm_consumed` on arbitrary bytes. Concatenated Netpbm/PAM/PFM
# images are walked by a loop that skips inter-image whitespace and
# advances `offset += consumed`; the unique surface is the per-image
# byte-accounting (deterministic length for binary/PFM magics, ASCII
# tokenizer cursor for P1/P2/P3) and the zero-consumed loop guard — none
# of which the single-image `decode` harness reaches. The harness also
# asserts the walker's core invariant: `consumed <= input.len()`.
[[bin]]
name = "multi"
path = "fuzz_targets/multi.rs"
test = false
doc = false

# Recode fixed-point — `decode_pbm` → `encode_pbm` → `decode_pbm`.
# Where `decode` and `encode_roundtrip` each fuzz one direction for
# panic-freedom, this target closes the loop and asserts a *semantic*
# invariant: any image the decoder produces must re-encode + re-decode
# unchanged (same dims, format, stride, plane bytes) and the encoder
# output must be idempotent. Catches encoder/decoder asymmetries — a
# channel swap, wrong maxval, byte-order flip, stride bug or dropped
# channel — that a one-directional never-panic harness cannot see.
[[bin]]
name = "recode"
path = "fuzz_targets/recode.rs"
test = false
doc = false
